# python-project-template

./: .buildinfo  .gitignore  CONTRIBUTING_en.md  CONTRIBUTING_ja.md  Makefile  README.md  genindex.html  index.html  modules.html  objects.inv  project_name.html  py-modindex.html  pyproject.toml  rename.sh  search.html  searchindex.js  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  doc.yml
_sources/: index.rst.txt
_sources/notebooks/: 0_example.ipynb.txt
doc/source/: conf.py  index.rst  modules.rst
doc/source/notebooks/: 0_example.ipynb  index.rst
notebooks/: 0_example.html  0_example.ipynb  index.html
