[tool.poetry]
name = "project_name"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.942"
isort = "^5.10.1"
Sphinx = "^4.3.0"
sphinx-book-theme = "^0.1.6"
ipykernel = "^6.5.0"
myst-nb = "^0.15.0"

[tool.isort]
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
